Fixed z-index of userbar

--- a/layouts/minimal/style.css
+++ b/layouts/minimal/style.css
@@ -83,7 +83,7 @@ table {
 		top: 0;
 		right: 0;
 		text-align: right;
-		z-index: 10000;
+		z-index: 10;
 	}
 
 #header {
